3ano/PLC/TP7/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> Exp .
Rule 2     Exp -> INT
Rule 3     Exp -> ( Funcao )
Rule 4     Funcao -> + Lista
Rule 5     Funcao -> * Lista
Rule 6     Lista -> Exp Lista
Rule 7     Lista -> Exp

Terminals, with rules where they appear

(                    : 3
)                    : 3
*                    : 5
+                    : 4
.                    : 1
INT                  : 2
error                : 

Nonterminals, with rules where they appear

Exp                  : 1 6 7
Funcao               : 3
Lista                : 4 5 6
S                    : 0

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . Exp .
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    INT             shift and go to state 3
    (               shift and go to state 4

    S                              shift and go to state 1
    Exp                            shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> Exp . .

    .               shift and go to state 5


state 3

    (2) Exp -> INT .

    .               reduce using rule 2 (Exp -> INT .)
    INT             reduce using rule 2 (Exp -> INT .)
    (               reduce using rule 2 (Exp -> INT .)
    )               reduce using rule 2 (Exp -> INT .)


state 4

    (3) Exp -> ( . Funcao )
    (4) Funcao -> . + Lista
    (5) Funcao -> . * Lista

    +               shift and go to state 7
    *               shift and go to state 8

    Funcao                         shift and go to state 6

state 5

    (1) S -> Exp . .

    $end            reduce using rule 1 (S -> Exp . .)


state 6

    (3) Exp -> ( Funcao . )

    )               shift and go to state 9


state 7

    (4) Funcao -> + . Lista
    (6) Lista -> . Exp Lista
    (7) Lista -> . Exp
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    INT             shift and go to state 3
    (               shift and go to state 4

    Lista                          shift and go to state 10
    Exp                            shift and go to state 11

state 8

    (5) Funcao -> * . Lista
    (6) Lista -> . Exp Lista
    (7) Lista -> . Exp
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    INT             shift and go to state 3
    (               shift and go to state 4

    Lista                          shift and go to state 12
    Exp                            shift and go to state 11

state 9

    (3) Exp -> ( Funcao ) .

    .               reduce using rule 3 (Exp -> ( Funcao ) .)
    INT             reduce using rule 3 (Exp -> ( Funcao ) .)
    (               reduce using rule 3 (Exp -> ( Funcao ) .)
    )               reduce using rule 3 (Exp -> ( Funcao ) .)


state 10

    (4) Funcao -> + Lista .

    )               reduce using rule 4 (Funcao -> + Lista .)


state 11

    (6) Lista -> Exp . Lista
    (7) Lista -> Exp .
    (6) Lista -> . Exp Lista
    (7) Lista -> . Exp
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    )               reduce using rule 7 (Lista -> Exp .)
    INT             shift and go to state 3
    (               shift and go to state 4

    Exp                            shift and go to state 11
    Lista                          shift and go to state 13

state 12

    (5) Funcao -> * Lista .

    )               reduce using rule 5 (Funcao -> * Lista .)


state 13

    (6) Lista -> Exp Lista .

    )               reduce using rule 6 (Lista -> Exp Lista .)

